--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,18 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# proxy
+#systemProp.socksProxyHost=127.0.0.1
+#systemProp.socksProxyPort=1080
+#systemprop.socksProxyVersion=5
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=1080
 #for build
 compile_sdk=27
 min_sdk=21
 target_sdk=27
 # for lib
-kotlin_version=1.2.30
+kotlin_version=1.2.31
 anko_version=0.10.4
 coroutine_version=0.22.3
 android_support_version=27.0.2
