--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.enableD8=false
 # proxy
 #systemProp.socksProxyHost=127.0.0.1
 #systemProp.socksProxyPort=1080
